2.31.1-beta-rp.9
================
Apr 17, 2021
- Replace double space with ` &nbsp;` when escaping for HTML

2.31.1-beta-rp.8
================
Apr 17, 2021
- Enrich assertion errors to include binding information
- Escape spaces and tildes in RP logs
- Add `gwen.rp.escapeForMarkdown` setting to control whether or not to escape for markdown in report portal

2.31.1-beta-rp.7
================
Apr 12, 2021
- Fix parameter interpolation involving if conditions

2.31.1-beta-rp.6
================
Apr 11, 2021
- Fix composite steps involving if conditions
- Add 1 ms delay to all lifecyce events to ensure millisecond timestamp accuracy

2.31.1-beta-rp.5
================
Apr 7, 2021
- Fix report portal markdown escaping to encode `<>*` characters only
- Fix sequence of skipped steps in report portal
- Introduce synthetic stepdefs for `if` and `repeat` steps for consistent structure

2.31.1-beta-rp.4
================
Mar 26, 2021
- Fix logging of steps with "if" conditions to report portal
- Update report portal library from v5.0.18 to v5.0.21

2.31.1-beta-rp.3
================
Mar 25, 2021
- Fix interrupted steps in report portal
- Fix screenshot attachemnts in HTML report
- Fix undefined step issue in report portal

2.31.1-beta-rp.2
================
Mar 20, 2021
- Fix report portal data table issues
- Setting for optionally sending tags to report portal

2.31.1-beta-rp.1
================
Feb 25, 2021
- Introduce report portal integration

2.31.1
======
Dec 4, 2020
- Optimisation: bypass masked settings lookups for non-masked cases

2.31.0
======
Dec 1, 2020
- Introduce masked settings to make all your private and sensitive settings appear 
  as `●●●●●` in all Gwen logs, reports, errors and console outputs
- Internal cleanup and Refactor
  - Improved Gwen Gherkin model
  - Add UUID to each node
  - Add uri and source reference to each node
  - Introduce lifecycle events and listeners

2.30.0
======
Oct 20, 2020