@@ -44,7 +44,7 @@ class EvalEngineTest extends FlatSpec with Matchers with MockitoSugar with GwenT
   "Step that fails interpolation" should "not be evaluated" in {
     val env = engine.init(new GwenOptions())
     var step = Step(StepKeyword.Given.toString, """x is "${y}"""")
-    step = engine.evaluateStep(parent, step, env)
+    step = engine.evaluateStep(parent, step, 0, env)
     step.evalStatus.status should be (StatusKeyword.Failed)
     env.scopes.getOpt("x") should be (None)
     step.stepDef should be (None)
@@ -54,7 +54,7 @@ class EvalEngineTest extends FlatSpec with Matchers with MockitoSugar with GwenT
     val env = engine.init(new GwenOptions())
     env.scopes.set("y", "1")
     var step = Step(StepKeyword.Given.toString, """x is "${y}"""")
-    step = engine.evaluateStep(parent, step, env)
+    step = engine.evaluateStep(parent, step, 0, env)
     step.evalStatus.status should be (StatusKeyword.Passed)
     env.scopes.get("x") should be ("1")
     step.stepDef should be (None)
@@ -71,7 +71,7 @@ class EvalEngineTest extends FlatSpec with Matchers with MockitoSugar with GwenT
     env.addStepDef(stepDef)
     env.scopes.set("y", "1")
     var step = Step(StepKeyword.When.toString, "I assign x, y, and z")
-    step = engine.evaluateStep(parent, step, env)
+    step = engine.evaluateStep(parent, step, 0, env)
     step.evalStatus.status should be (StatusKeyword.Passed)
     env.scopes.get("x") should be ("1")
     env.scopes.get("y") should be ("2")
